--- a/app/src/main/res/layout/category_selection.xml
+++ b/app/src/main/res/layout/category_selection.xml
@@ -219,10 +219,10 @@
         android:id="@+id/second_scroll_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/category_component_box_id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/first_scroll_view">
+        app:layout_constraintStart_toEndOf="@id/first_scroll_view"
+        app:layout_constraintTop_toBottomOf="@id/category_component_box_id">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -298,7 +298,6 @@
                         android:contentDescription="My Button Description" />
 
 
-
                 </LinearLayout>
 
 
@@ -335,7 +334,6 @@
                         android:contentDescription="My Button Description" />
 
 
-
                 </LinearLayout>
 
                 <LinearLayout
@@ -343,8 +341,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|top"
                     android:layout_marginTop="232dp"
-                    android:gravity="center_horizontal"
                     android:background="@android:color/transparent"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <Button
@@ -370,7 +368,6 @@
                         android:layout_marginEnd="8dp"
                         android:background="@android:color/transparent"
                         android:contentDescription="My Button Description" />
-
 
 
                 </LinearLayout>
@@ -418,7 +415,6 @@
 
         </LinearLayout>
     </ScrollView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
