--- a/app/src/main/res/layout/category_product_list.xml
+++ b/app/src/main/res/layout/category_product_list.xml
@@ -205,7 +205,8 @@
         android:layout_width="match_parent"
         android:layout_height="61dp"
         android:gravity="center"
-        android:text="# 2023 겨울 신상 업데이트"
+        android:text="@string/category_winter_update"
+        android:textColor="@color/category_main_color"
         android:textSize="17sp"
         app:layout_constraintTop_toBottomOf="@id/category_horizontal_scrollview_id" />
 
@@ -260,6 +261,7 @@
                         android:gravity="center_vertical"
                         android:layout_marginLeft="10dp"
                         android:text="상품 이름"
+                        android:textStyle="bold"
                         android:textSize="20sp"
                         />
 
@@ -305,6 +307,7 @@
                         android:layout_height="61dp"
                         android:gravity="center_vertical"
                         android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
                         android:text="상품 이름"
                         android:textSize="20sp"
                         />
@@ -359,6 +362,7 @@
                         android:layout_height="61dp"
                         android:gravity="center_vertical"
                         android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
                         android:text="상품 이름"
                         android:textSize="20sp"
                         />
@@ -406,6 +410,7 @@
                         android:layout_height="61dp"
                         android:gravity="center_vertical"
                         android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
                         android:text="상품 이름"
                         android:textSize="20sp"
                         />
@@ -461,6 +466,7 @@
                         android:layout_height="61dp"
                         android:gravity="center_vertical"
                         android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
                         android:text="상품 이름"
                         android:textSize="20sp"
                         />
