--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -32,12 +32,12 @@
         tools:layout_editor_absoluteY="678dp" />
 
     <android.widget.Button
-        android:id="@+id/login_button2"
+        android:id="@+id/btn_login"
         android:layout_width="350dp"
         android:layout_height="55dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/loginbutton"
+        android:background="@drawable/login_button"
         android:text="로그인"
         android:textSize="18sp"
         android:textColor="#FFFFFF"
@@ -46,7 +46,7 @@
         tools:layout_editor_absoluteY="239dp" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/login_back"
         android:layout_width="32dp"
         android:layout_height="26dp"
         app:srcCompat="@drawable/back_button"
@@ -55,10 +55,10 @@
         tools:layout_editor_absoluteY="23dp" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/et_id"
         android:layout_width="350dp"
         android:layout_height="55dp"
-        android:background="@drawable/inputbutton"
+        android:background="@drawable/input_button"
         android:ems="10"
         android:hint=" 아이디"
         android:inputType="text"
@@ -67,10 +67,10 @@
         tools:layout_editor_absoluteY="98dp" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/et_pass"
         android:layout_width="350dp"
         android:layout_height="55dp"
-        android:background="@drawable/inputbutton"
+        android:background="@drawable/input_button"
         android:ems="10"
         android:hint=" 비밀번호"
         android:inputType="text"
@@ -79,17 +79,17 @@
         tools:layout_editor_absoluteY="165dp" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="96dp"
-        android:layout_height="45dp"
+        android:id="@+id/btn_register"
+        android:layout_width="120dp"
+        android:layout_height="68dp"
         android:alpha="0.5"
         android:background="@android:color/transparent"
         android:text="회원가입"
-        android:textSize="15sp"
         android:textColor="#000000"
-        tools:layout_editor_absoluteX="321dp"
-        tools:layout_editor_absoluteY="294dp"
-        tools:ignore="MissingConstraints" />
+        android:textSize="15sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="294dp"
+        tools:layout_editor_absoluteY="294dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
