detailpage main review 수정중중

--- a/app/src/main/res/layout/detailpage_activity_main.xml
+++ b/app/src/main/res/layout/detailpage_activity_main.xml
@@ -112,8 +112,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="56dp"
+        android:layout_marginBottom="436dp"
         android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -124,7 +127,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="298dp"
+        android:layout_marginBottom="388dp"
         android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -158,9 +163,12 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="346dp"
+        android:layout_marginBottom="306dp"
         android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3"
@@ -193,7 +201,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="428dp"
+        android:layout_marginBottom="224dp"
         android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -240,7 +250,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="510dp"
+        android:layout_marginBottom="186dp"
         android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -265,10 +277,12 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="508dp"
         android:layout_marginEnd="324dp"
+        android:layout_marginBottom="186dp"
         android:background="#00ff0000"
         android:text="상품정보"
         android:textColor="#FF000000"
         android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -281,10 +295,12 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="221dp"
+        android:layout_marginBottom="185dp"
         android:background="#00ff0000"
         android:text="리뷰"
         android:textColor="#FF000000"
         android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -297,10 +313,12 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="508dp"
         android:layout_marginEnd="113dp"
+        android:layout_marginBottom="186dp"
         android:background="#00ff0000"
         android:text="사이즈"
         android:textColor="#FF000000"
         android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.957"
         app:layout_constraintStart_toStartOf="parent"
@@ -313,10 +331,12 @@
         android:layout_height="37dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="508dp"
+        android:layout_marginBottom="186dp"
         android:background="#00ff0000"
         android:text="문의"
         android:textColor="#FF000000"
         android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.957"
         app:layout_constraintStart_toStartOf="parent"
@@ -367,8 +387,6 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
