--- a/app/src/main/res/layout/detailpage_activity_main_review.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_review.xml
@@ -131,18 +131,56 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="58dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="239dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/white" />
 
             <View
                 android:id="@+id/view2"
                 android:layout_width="match_parent"
-                android:layout_height="239dp"
-                android:background="#FFFFFF" />
-        </LinearLayout>
+                android:layout_height="45dp"
+                android:layout_marginBottom="5dp"
+                android:layout_below="@id/view"
+                android:background="@color/white" />
+
+            <View
+                android:id="@+id/ellipse_1"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_above="@id/view2"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="368dp"
+                android:layout_marginBottom="-38dp"
+                android:background="#8E8BD8" />
+
+            <TextView
+                android:id="@+id/brandText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/view2"
+                android:layout_marginEnd="-75dp"
+                android:layout_marginBottom="-36dp"
+                android:layout_toStartOf="@id/ellipse_1"
+                android:text="브랜드" />
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                android:layout_below="@id/view2"
+                android:background="@color/white" />
 
 
+        </RelativeLayout>
     </ScrollView>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
